# time_tracker

./: .gitignore  CMakeLists.txt  README.md
docs/: TS_ru.docx
src/: Application.cpp  Application.h
src/core/: ThemeManager.cpp  ThemeManager.h
src/resources/qss/: black.qss  white.qss
src/resources/themes/dark/: dark.json  dark.qss
src/ui/: MainWindow.cpp  MainWindow.h  SideMenu.cpp  SideMenu.h
src/ui/pages/: BasePage.cpp  BasePage.h  HistoryPage.cpp  HistoryPage.h  ProfilePage.cpp  ProfilePage.h  SettingsPage.cpp  SettingsPage.h  TaskPage.cpp  TaskPage.h
time_tracker/: .gitignore  CMakeLists.txt  main.cpp  recources.qrc  time_tracker_en_US.ts  timetracker.cpp  timetracker.h  timetracker.ui
time_tracker/classes/: DeadlineDialog.cpp  DeadlineDialog.h  Task.cpp  Task.h  TaskSettingsDialog.cpp  TaskSettingsDialog.h  TimerDialog.cpp  TimerDialog.h
time_tracker/qss/: black.qss  white.qss
